# ingredients.http

./: .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ingredients_http/: app.py  app_mount.py  route.py  router.py
ingredients_http/conf/: default_settings.py
ingredients_http/errors/: validation.py
ingredients_http/schematics/: types.py
ingredients_http/test/: base.py  test_application.py  test_router.py
ingredients_http/test/routes/app/: bar.py  baz.py  foo.py  qux.py
ingredients_http/test/routes/app/validation_models/: bar.py  baz.py  foo.py  qux.py
ingredients_http/test/routes/with/: foo.py
ingredients_http/tools/: model.py  param_validation.py
