[metadata]
name = ingredients.http
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = HTTP Library for Sandwich Cloud
description-file = README.rst
home-page = https://github.com/sandwichcloud/ingredients.http
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    ingredients_http

[pbr]
skip_authors = 1
skip_changelog = 1